event-service/deployment/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service
  namespace: bsk
  labels:
    app: event-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: event-service
  template:
    metadata:
      labels:
        app: event-service
    spec:
      containers:
        - name: event-service
          image: ghcr.io/tmogdans/bsk/event-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
