event-service/deployment/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-service-np
spec:
  type: NodePort
  selector:
    app: event-service
  ports:
    - port: 80
      name: http
      targetPort: 80
