event-service/deployment/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-service-ingress
  namespace: bsk
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: event-service.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: event-service-np
                port:
                  number: 80
